# calphy

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CITATION.cff  EXECUTABLE_RUNNER_PLAN.md  LICENSE  README.md  calphy.def  environment-docs.yml  environment-nolammps.yml  environment.yml  input.yaml  pyproject.toml  requirements.txt  setup.py
.github/variables/: cache_number.env
.github/workflows/: deploy.yml  docs.yml  testing.yml
calphy/: __init__.py  alchemy.py  clitools.py  composition_transformation.py  errors.py  helpers.py  input.py  inputbk.py  integrators.py  kernel.py  lattice.py  library_runner.py  liquid.py  phase.py  phase_diagram.py  postprocessing.py  queuekernel.py  range_scan.py  routines.py  runner.py  scheduler.py  solid.py  splines.py  structural_monitoring.py  transition_detector.py  utils.py
docs/: requirements.txt
docs/_static/: default.css  theme_extra.css
docs/_templates/: download.html  sidebarhelp.html
docs/source/: calphy.rst  conf.py  documentation.rst  example_link.rst  examples.md  examples.rst  faqs.md  gettingstarted.md  index.rst  inputfile.md  inputfile.rst  modules.rst  outputfiles.md  pytint.rst  research.md  transition_detection.md
examples/: cli.md  input.yaml  inputfile.md
examples/Cu_EAM/: al_example.ipynb  cu.data  cu_example.ipynb  input.yaml
examples/Fe_EAM/: fe_example.ipynb  input.yaml
examples/NiAl_EAM/: input.yaml  nial.data
examples/Ti_EAM/: input.yaml  ti_example.ipynb
examples/ZrCu_EAM/: fe-zrcu.data  zrcu_example.ipynb
examples/example_01/: README.md  analysis.ipynb  input-mp.yaml  input.yaml
examples/example_02/: README.md  analysis.ipynb  input.yaml  input1.yaml  input2.yaml
examples/example_03/: 01_basic_usage.ipynb  README.md  \  analysis.ipynb  conf.lqd  input.1.yaml  input.2.yaml  input.yaml  test-input.yaml  test.input.yaml
examples/example_04/: README.md  analysis.ipynb  input.1.yaml  input.yaml  input1.yaml  input2.yaml  input3.yaml  input4.yaml  input5.yaml
examples/example_05/: 1.input.1.yaml  1.input.2.yaml  2.input.1.yaml  2.input.2.yaml  3.input.1.yaml  3.input.2.yaml  4.input.1.yaml  4.input.2.yaml  5.input.1.yaml  5.input.2.yaml  README.md  analysis.ipynb  input.yaml  input1.yaml  input2.yaml  input3.yaml  input4.yaml  input5.yaml
lammps-patch/: lammps-ace.patch
notebooks/: read_options.ipynb  running_from_notebook.ipynb  schema.ipynb  test.json
pytint/: __init__.py  alchemy.py  average_scripts.py  averaging.py  fitting.py  helpers.py  input.py  integrate_scripts.py  integrators.py  kernel.py  lattice.py  liquid.py  preparation.py  queuekernel.py  reversiblescaling.py  solid.py
tests/: Al.eam.fs  conf1.data  conftest.py  inp1.yaml  inp2.yaml  inp3.yaml  inp_tri.yaml  input.yaml  test_command_vocabulary.py  test_composition.py  test_composition_transformation_bug.py  test_element_ordering.py  test_ex07.py  test_fix_paths_user_expansion.py  test_golden_streams.py  test_helpers.py  test_input_validation.py  test_integration_lammps.py  test_integrators.py  test_library_runner.py  test_liquid_avg.py  test_liquid_rs.py  test_meam_pair_coeff.py  test_melting_temperature_n_iterations.py  test_options.py  test_phase_diagram.py  test_phase_diagram_validation.py  test_preflight.py  test_pressure_coupling.py  test_qtb_input.py  test_read_structure_composition.py  test_runner.py  test_scheduler.py  test_seed.py  test_solid_avg.py  test_solid_methods.py  test_solid_rs.py  test_transition_detector.py  tests_NB.ipynb
(+152 files in other folders)
