[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "calphy"
version = "1.8.4"
description = "free energy calculation for python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Sarath Menon", email = "sarathmenon@mailbox.org" },
    { name = "Yury Lysogorskiy" },
    { name = "Ralf Drautz" },
]
keywords = ["calphy", "free energy", "molecular dynamics", "LAMMPS"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=2",
    "pandas",
    "matplotlib",
    "pyarrow",
    "pyyaml",
    "mendeleev",
    "tqdm",
    "scipy",
    "pydantic>=2",
    "pyscal3",
]

[project.optional-dependencies]
test = ["pytest>=7"]
materials-project = ["mp_api"]
# execution_mode: library -- drives LAMMPS through pylammpsmpi instead of the
# lmp binary. Also needs the `lammps` python module (e.g. conda-forge lammps).
library = ["pylammpsmpi"]

[project.urls]
Homepage = "https://github.com/ICAMS/calphy"
Documentation = "https://calphy.org"
Repository = "https://github.com/ICAMS/calphy"

[project.scripts]
calphy = "calphy.kernel:main"
calphy_kernel = "calphy.queuekernel:main"
calphy_convert_input = "calphy.clitools:convert_legacy_inputfile"
calphy_phase_diagram = "calphy.clitools:phase_diagram"

[tool.pytest.ini_options]
markers = [
    "lammps: integration test that runs the real LAMMPS binary (skipped when no lmp resolves)",
    "slow: slow integration test (the heavier end-to-end scenarios)",
]

[tool.setuptools.packages.find]
include = ["calphy", "calphy.*"]
